// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderCell renders default styling 1`] = `
<Cell
  className=""
  data-garden-id="tables.header_cell"
  data-garden-version="version"
  role="columnheader"
/>
`;

exports[`HeaderCell renders menu styling if provided 1`] = `
<Cell
  className=""
  data-garden-id="tables.header_cell"
  data-garden-version="version"
  menu={true}
  role="columnheader"
/>
`;

exports[`HeaderCell renders minimum styling if provided 1`] = `
<Cell
  className=""
  data-garden-id="tables.header_cell"
  data-garden-version="version"
  minimum={true}
  role="columnheader"
/>
`;

exports[`HeaderCell renders truncation styling if provided 1`] = `
<Cell
  className=""
  data-garden-id="tables.header_cell"
  data-garden-version="version"
  role="columnheader"
  truncate={true}
/>
`;
